tests/source1/pass/expr_strcat1.source
display("123" + "456");
//"123456"