tests/source1/fail/runtime_typecheck10.source
display(-true);
//error: "boo type mismatch"